# niemand-server

./: .gitignore  Dockerfile  pyproject.toml
src/niemand_server/: containers.py  main.py  util.py
src/niemand_server/service/: aireport.py  calendar.py  location.py  openhab.py  shopping.py  skill_manager.py  time.py  train.py  traincheck.py  weather.py
src/niemand_server/service/tags/: tags_de.properties
src/niemand_server/skill/: chatgpt.py  openhab.py  shopping.py  skill.py  traincheck.py  weather.py
